--- a/templates/signin.html.twig
+++ b/templates/signin.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Signin{% endblock %}
+
 {% block body %}
 <div {{ vue_component('Signin') }}></div>
 {% endblock %}
