--- a/templates/signup.html.twig
+++ b/templates/signup.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Signup{% endblock %}
+
 {% block body %}
 <div {{ vue_component('Signup') }}></div>
 {% endblock %}
